--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "@seishinverse/firebase-storage",
   "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
+  "description": "Firebase storage for file service",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
-  "type": "commonjs",
+  "type": "module",
+  "browser": "dist/index.umd.js",
+  "files": [
+    "dist"
+  ],
   "homepage": "https://github.com/seishinverse/firebase-storage",
   "scripts": {
     "dev": "rollup -c -w",
@@ -19,18 +24,22 @@
   "author": "Dmytro Honchar <demetrgonchar@gmail.com> (https://github.com/mxrcury)",
   "license": "MIT",
   "devDependencies": {
+    "@google-cloud/storage": "6.12.0",
+    "@microsoft/api-extractor": "^7.36.4",
     "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-typescript": "^11.1.2",
     "@types/node": "^20.5.0",
+    "firebase-admin": "^11.10.1",
     "rollup": "^3.28.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.1",
     "typescript": "^5.1.6"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@google-cloud/storage": "6.12.0",
-    "@types/google-cloud__storage": "^2.3.1",
     "firebase-admin": "^11.10.1"
   }
 }
